1CC [Styles]: Two Scrollbar Issue Fixed (#3563)
* (styles): Two Scroll bar Issue Fixed

* (feat): Incorporated PR comments

--- a/app/css/modal.styl
+++ b/app/css/modal.styl
@@ -733,16 +733,6 @@ i {
 }
 
 #content.one-cc {
-   *::-webkit-scrollbar {
-    display: none;
-
-  }
-
-  * {
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-  }
-
   #logo {
     width: 40px;
     height: 40px;
